Try to use APIs for upgraded compiler modules